# fastapi-gym-crm

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml
envs/: .env.local  .env.prod
src/: main.py
src/common/: builder.py  config.py  database.py  errors.py  exceptions.py  handlers.py  logger.py  middlewares.py  settings.py
src/models/: __init__.py  base_model.py
src/models/auth/: user_model.py
src/repositories/: base_repository.py
src/repositories/auth/: user_repository.py
src/routers/: auth_router.py
src/routers/auth/: auth_router.py
src/schemas/auth/: auth_schema.py  user_schema.py
src/services/auth/: auth_service.py  user_service.py
src/utils/: token_utils.py
