[tool.poetry]
name = "fastapi-template"
version = "0.1.0"
description = ""
authors = ["Jimin Yoo <jmy0819_@naver.com>"]
readme = "README.md"
packages = [{include = "*", from="src"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.4"
uvicorn = "^0.32.0"
pydantic-settings = "^2.6.1"
sqlalchemy = "^2.0.36"
aiomysql = "^0.2.0"
greenlet = "^3.1.1"
cryptography = "^44.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
